parslers-benchmark/src/tests/invalid/syntaxErr/variables/badintAssignments1.wacc
# bad integer assignment - whitespace should delimit ints

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int x = 22 0
end 
